--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ datasets==3.2.0
 dill==0.3.8
 einops==0.8.0
 evaluate==0.4.3
+faiss-cpu==1.10.0
 filelock==3.16.1
 frozenlist==1.5.0
 fsspec==2024.9.0
@@ -20,6 +21,7 @@ Jinja2==3.1.5
 joblib==1.4.2
 Markdown==3.7
 MarkupSafe==3.0.2
+mauve-text==0.4.0
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
