--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,16 @@ absl-py==2.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
+annotated-types==0.7.0
 attrs==24.3.0
+blis==1.2.0
+catalogue==2.0.10
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+cloudpathlib==0.20.0
+confection==0.1.5
+cymem==2.0.11
 datasets==3.2.0
 dill==0.3.8
 einops==0.8.0
@@ -19,12 +25,18 @@ huggingface-hub==0.27.1
 idna==3.10
 Jinja2==3.1.5
 joblib==1.4.2
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
 Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mauve-text==0.4.0
+mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
+murmurhash==1.0.12
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.1
@@ -43,33 +55,49 @@ nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+preshed==3.0.9
 propcache==0.2.1
 protobuf==5.29.3
 pyarrow==18.1.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+rich==13.9.4
 rouge_score==0.1.2
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
 sentence-transformers==3.4.0
 sentencepiece==0.2.0
+shellingham==1.5.4
 six==1.17.0
+smart-open==7.1.0
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
 sympy==1.13.1
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
+thinc==8.3.4
 threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.5.1
 tqdm==4.67.1
 transformers==4.48.0
 triton==3.1.0
+typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
+wasabi==1.1.3
+weasel==0.4.1
 Werkzeug==3.1.3
+wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.18.3
