--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ requirements_bernard.txt
 /src/utils/__pycache__
 runs
 .jupyter/desktop-workspaces/default-37a8.jupyterlab-workspace
-/logs
 encoding_v0.ipynb
 encoding_v1.ipynb
 encoding_v2.ipynb
@@ -15,3 +14,4 @@ encoding_v3.ipynb
 encoding_v4.ipynb
 src/inference.ipynb
 *.pth
+venv-test
